--- a/object-2.html
+++ b/object-2.html
@@ -7,9 +7,13 @@
 		<h1>I'm having trouble displaying a Javascript alert.</h1>
 		<p>I think I'm using the correct function, but I can't figure out what's wrong. Could you point me in the right direction?</p>
 		<pre>
-			alert(This is a message)
+			&lt;ul&gt;
+				item 1
+				item 2
+				item 3
+			&lt;/ul&gt;
 		</pre>
-		<p>June 5, 2019</p>
+		<p>Question Date: June 16, 2015</p>
 	</body>
 </html>
 
